# organicmaps

./: .conflict-files  CMakeLists.txt  CMakePresets.json  precompiled_headers.hpp  vcpkg.json
.auto-resolution/: CMakeLists.txt
.auto-resolution/coding/: CMakeLists.txt  sha1.cpp
.auto-resolution/indexer/: categories_holder.cpp  edit_journal.hpp  search_string_utils.cpp
.auto-resolution/platform/: location_service.cpp  platform.cpp  qt_location_service.cpp
.auto-resolution/qt/: mainwindow.cpp
.conflict-base-0/: CMakeLists.txt
.conflict-base-0/3party/: CMakeLists.txt
.conflict-base-0/drape/: harfbuzz_shaping.cpp
.conflict-base-0/search/: latlon_match.cpp
.conflict-side-0/: vcpkg.json
.conflict-side-0/3party/: CMakeLists.txt
.conflict-side-0/platform/: measurement_utils.cpp
.conflict-side-1/3party/: CMakeLists.txt
.conflict-side-1/3party/protobuf/: CMakeLists.txt
.conflict-side-1/base/: random.hpp  timegm.cpp
3party/: CMakeLists.txt
base/: CMakeLists.txt  logging.cpp  string_utils.cpp  string_utils.hpp
cmake/: OmimConfig.cmake  OmimHelpers.cmake
coding/: sha1.cpp
data/: desktop_ru.qm
drape/: texture_manager.hpp
generator/: search_index_builder.cpp
indexer/: CMakeLists.txt  drules_include.hpp  drules_struct.pb.cc
platform/: CMakeLists.txt  http_client_curl.cpp  platform.cpp
qt/: CMakeLists.txt  desktop_ru.ts  main.cpp  mainwindow.cpp  mainwindow.hpp  mwms_borders_selection.hpp  osm_auth_dialog.cpp  osm_auth_dialog.hpp  preferences_dialog.cpp  routing_settings_dialog.cpp  routing_settings_dialog.hpp
std/: windows.hpp
(+19 files in other folders)
